# SigurLogViewer

./: .gitignore  CMakeLists.txt  README.md  fileloader.cpp  fileloader.h  filesplitter.cpp  filesplitter.h  linenumberarea.cpp  linenumberarea.h  logentry.h  logparser.cpp  logparser.h  logtab.cpp  logtab.h  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  styles.h  syntaxhighlighter.cpp  syntaxhighlighter.h  updatechecker.cpp  updatechecker.h
.qtcreator/: CMakeLists.txt.user.35fbd75  CMakeLists.txt.user.97bfc91
